# odoo-mcp

./: README.md  pyproject.toml
src/odoo_mcp/: __main__.py  client.py  server.py
