[project]
name = "suncombo-odoo-mcp"
version = "0.2.2"
description = "MCP Server for Odoo ERP - generic CRUD, search, and schema exploration"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0"]

[project.scripts]
odoo-mcp = "odoo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
